Добавлено взаимодействие с пользователем
